@@ -1,3 +1,4 @@
+Build a Fraction: Numbers: Fixed reset for fraction skeletons
 Build a Fraction: Numbers: Made different card size for 1 vs 2 digit numbers
 Build a Fraction: Numbers: Have the fraction skeleton start smaller in the toolbox, and reduce the toolbox height
 Build a Fraction: Put reset and refresh buttons horizontally next to each other centered below the level title
